# magic-frame

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  project.config.json  requirements.txt  start.sh  wrangler.toml
backend/: Dockerfile  README.md  __init__.py  catalog.py  cloud_runtime.py  core.py  generation.py  main.py  pyproject.toml  schemas.py  server.js  services.py  test_api.py
backend/routes/: admin.py  public.py  system.py
backend/tests/: api.test.js
backend_fastapi/: Dockerfile  README.md  cloud_runtime.py  main.py  pyproject.toml  test_api.py
docs/: AI影像写真馆全栈架构设计prompt.md  AI影像写真馆前端架构文档.md  AI影像写真馆后端架构文档.md  AI影像写真馆接口Swagger文档.yaml  AI影像特效小程序 PRD（MVP正式版）.docx  AI影像特效小程序 PRD（MVP正式版）.md  API模型可行性测试设计.md  BACKEND_MODULES.md  BRAND_NAMES.md  CHECKLIST.md  DATABASE_SCHEMA.md  DESIGN.md  SPEC.md  TASKS.md  cloudflare-backend-deploy.md  history.md  wechat-cloud-run-deploy.md
frontend/admin/: app.js  index.html  styles.css
frontend/public/: app.js  gpt-image2-styles.html  gpt-image2-styles.js  gpt-image2.html  gpt-image2.js  index.html  miniapp.html  miniapp.js  mvp.css  mvp.html  mvp.js  styles.css
frontend/weapp/: app.js  app.json  app.wxss  project.config.json
frontend/weapp/components/app-button/: index.js  index.wxml  index.wxss
frontend/weapp/utils/: api.js  constants.js
scripts/: deploy_cloudflare_worker.sh  env_to_json.py  migrate_legacy_snapshot.py  render_dockerfile_env.py  sync_cloudrun_env.py
worker/: index.js
workers/kl-api-proxy/: README.md  index.js  wrangler.toml
(+80 files in other folders)
