[project]
name = "ai-portrait-fastapi"
version = "0.1.0"
description = "FastAPI backend for the AI portrait mini-program APIs"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
